[package]
name = "onemfive_daemon"
version = "0.0.3"
authors = ["objectorange <objectorange@1m5.io>"]
license-file = "LICENSE"
edition = "2018"
description = "1M5 daemon providing censorship-resistant communications and services"
homepage = "https://1m5.io"
documentation = "https://github.com/1m5/1m5-daemon"
repository = "https://github.com/1m5/1m5-daemon.git"
publish = true
readme = "README.md"
keywords = ["censorship","privacy","decentralized"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"

ra_common = "0.0.32"
seda_bus = "0.0.13"

onemfive_common = "0.0.2"


