[package]
name = "onemfive_daemon"
version = "0.0.13"
authors = ["objectorange <objectorange@1m5.io>"]
license-file = "LICENSE"
edition = "2018"
description = "1M5 daemon providing censorship-resistant communications and services"
homepage = "https://1m5.io"
documentation = "https://github.com/1m5/1m5-daemon"
repository = "https://github.com/1m5/1m5-daemon.git"
publish = true
readme = "README.md"
keywords = ["censorship","privacy","decentralized"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository = "1m5/1m5-daemon", branch = "master" }

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
failure = "0.1.5"
exitfailure = "0.5.1"

## Infrastructure
ra_common = "0.0.43"
seda_bus = "0.0.15"

onemfive_common = "0.0.7"

# Network Services
https_client = "0.0.6"
vpn_client = "0.0.7"
tor_client = "0.0.8"
i2p_client = "0.0.11"
bluetooth_client = "0.0.10"

rocket = "0.4.4"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["serve","json"]

